--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Estàs segur que vols tancar la sessió de Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Estàs segur que vols carregar la teva configuració de Mega Hack v8? Això sobreescriurà la teva configuració actual",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Sessió tancada correctament! Pots utilitzar Mega Hack fins que reinicis",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Surt de la capa de joc/editor abans de canviar a pantalla completa",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tens canvis sense desar al teu macro, segur que vols esborrar i començar de nou?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Estàs segur que vols eliminar el macro seleccionat?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Desactiva les tecles d'accés de Mega Hack mentre s'utilitza l'editor de nivells",
   "KEYBINDS/EMPTY": "N/D",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Nivells Principals",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Desbloqueja els nivells demons principals",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Personalitzador de Música",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Sense Resplendor",
   "COSMETIC/HACK_NO_GLOW/TIP": "Desactiva l'efecte de resplendor en tots els objectes",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Sense Mirall",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Desactiva l'efecte del portal mirall",
   "COSMETIC/HACK_NO_ORB_RING": "Sense Anell d'Orb",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Desactiva els shaders dins del nivell",
   "COSMETIC/HACK_NO_SHAKE": "Sense Sacsejada",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Desactiva els triggers de sacsejada",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Sense Deixant",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Estableix el deixant sempre com a desactivat",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Sense Pulsació de l'Wave",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Temps de Reaparició",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Canvia el temps de reaparició del jugador",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ignorar Speedhack",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Omplir Hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Perills",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacitat",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Implementació clàssica de pantalla completa sense vores (separada de la pròpia implementació de GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Pantalla Completa",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Permet que el joc ompli la teva pantalla principal",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusiu",
   "DISPLAY/FULLSCREEN/COMBO/1": "Sense Vores",
   "UTILITY": "Utilitat",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Captura de Pantalla",
   "SCREENSHOT/SCREENSHOT": "Captura de Pantalla",
   "SCREENSHOT/SCREENSHOT/TIP": "Fa una captura de pantalla",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Desar i copiar",
   "SCREENSHOT/COMBO/1": "Copiar al porta-retalls",
   "SCREENSHOT/COMBO/2": "Desar a fitxer",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Inferior-dreta",
   "STATUS/*/MOVE/DOWN": "Avall",
   "STATUS/*/MOVE/UP": "Amunt",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Mostrar unitats",
   "STATUS/MESSAGE/ENABLED": "Missatge",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Missatge",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostrar total",
   "STATUS/BEST_RUN/ENABLED": "Millor Intent",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Precisió de Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostrar prefix",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Morts de Noclip",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Comptador de Fotogrames",
   "STATUS/POSITION/ENABLED": "Posició",
   "STATUS/REPLAY_STATE/ENABLED": "Estat de Reproducció",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Reproducció",
   "REPLAY/FILE": "Seleccionar Macro",
   "REPLAY/OPEN": "Obrir Macro",
