--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Möchten Sie sich wirklich von Mega Hack abmelden?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Möchten Sie wirklich Ihre Mega Hack v8-Einstellungen laden? Dadurch wird Ihre aktuelle Konfiguration überschrieben.",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Erfolgreich abgemeldet! Sie können Mega Hack bis zum Neustart verwenden.",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Bitte beenden Sie den Play-layer/Editor, bevor Sie den Vollbildmodus aktivieren.",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Sie haben ungespeicherte Änderungen in Ihrem Makro. Möchten Sie diese wirklich löschen und neu beginnen?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Möchten Sie das ausgewählte Makro wirklich löschen?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Offizielle Levels",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Schaltet die offiziellen Demon-Levels frei",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Musik-Customiser",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
   "COSMETIC/HACK_NO_MIRROR/TIP": "",
   "COSMETIC/HACK_NO_ORB_RING": "",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Deaktiviert Shader-Effekte in Levels",
   "COSMETIC/HACK_NO_SHAKE": "Keine Shakes",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Deaktiviert Schüttel-Effekte",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Kein Trail",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Spieler-Trail ist immer aus",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Kein Wave-Pulsieren",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Respawn-Zeit",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Ändert die Respawn-Zeit des Spielers",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Hitboxen ausfüllen",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Gefahren",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Deckkraft",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "(sub to ProfZ) Klassische Implementierung des randlosen Vollbildmodus (unabhängig von der Implementierung von GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Vollbild",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exklusiv",
   "DISPLAY/FULLSCREEN/COMBO/1": "Unbegrenzt",
   "UTILITY": "Tools",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Screenshot",
   "SCREENSHOT/SCREENSHOT": "Screenshot",
   "SCREENSHOT/SCREENSHOT/TIP": "Nimmt einen Screenshot auf",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "",
   "SCREENSHOT/COMBO/1": "Kopieren",
   "SCREENSHOT/COMBO/2": "",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "",
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "",
   "STATUS/MESSAGE/ENABLED": "Nachricht",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Nachricht",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "",
   "STATUS/BEST_RUN/ENABLED": "Bester Run",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip-Genauigkeit",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip-Tode",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Frame",
   "STATUS/POSITION/ENABLED": "Position",
   "STATUS/REPLAY_STATE/ENABLED": "Wiedergabestatus",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Wiederholung",
   "REPLAY/FILE": "Makro Auswählen",
   "REPLAY/OPEN": "Makro Öffnen",
