--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Are you sure you want to log out of Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Are you sure you want to load your Mega Hack v8 settings? This will overwrite your current configuration",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Successfully logged out! You can use Mega Hack until you restart",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "Are you sure you want to disable all flagged cheats?",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Please exit the play-layer/editor before toggling fullscreen",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "You have unsaved changes in your macro, are you sure you want to clear and start fresh?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Are you sure you want to delete the selected macro?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Disables Mega Hack keybinds while using the level editor",
   "KEYBINDS/EMPTY": "N/A",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "Anti-Kick",
+  "BYPASS/HACK_ANTI_KICK/TIP": "Prevents you being blocked from player certain levels",
   "BYPASS/HACK_MAIN_LEVELS": "Main Levels",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Unlocks main demon levels",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Music Customiser",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "Disables the ghost trail effect on players",
   "COSMETIC/HACK_NO_GLOW": "No Glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Disables the glow effect on all objects",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "No New Best Popup",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "Disables the new best popup and reduces the extended respawn time",
   "COSMETIC/HACK_NO_MIRROR": "No Mirror",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Disables the mirror portal effect",
   "COSMETIC/HACK_NO_ORB_RING": "No Orb Ring",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Disables in-level shaders",
   "COSMETIC/HACK_NO_SHAKE": "No Shake",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Disables shake triggers",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "No Spider Dash",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "Disables the Spider Dash effect when teleporting",
   "COSMETIC/HACK_NO_TRAIL": "No Trail",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Sets the trail to always off",
   "COSMETIC/HACK_NO_WAVE_PULSE": "No Wave Pulse",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Respawn Time",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Changes player respawn time",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ignore Speedhack",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Show Axis-Aligned",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Shows the axis-aligned hitbox on rotated objects alongside their oriented hitbox",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Fill Hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Hazards",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacity",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Classic implementation of borderless fullscreen (separate to GD's own implementation)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Fullscreen",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Allows the game to fill your main display",
+  "DISPLAY/FULLSCREEN/COMBO": "Mode",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusive",
   "DISPLAY/FULLSCREEN/COMBO/1": "Borderless",
   "UTILITY": "Utility",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Screenshot",
   "SCREENSHOT/SCREENSHOT": "Screenshot",
   "SCREENSHOT/SCREENSHOT/TIP": "Takes a screenshot",
+  "SCREENSHOT/COMBO": "Capture Mode",
   "SCREENSHOT/COMBO/0": "Save & copy",
   "SCREENSHOT/COMBO/1": "Copy to clipboard",
   "SCREENSHOT/COMBO/2": "Save to file",
@@ -594,7 +605,8 @@
   "STATUS/*/POSITION/3": "Bottom-right",
   "STATUS/*/MOVE/DOWN": "Down",
   "STATUS/*/MOVE/UP": "Up",
-  "STATUS/*/UNITS": "Show units",
+  "STATUS/*/PREFIX": "Show Prefix",
+  "STATUS/*/UNITS": "Show Units",
   "STATUS/MESSAGE/ENABLED": "Message",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Message",
   "STATUS/TESTMODE/ENABLED": "Testmode",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Show total",
   "STATUS/BEST_RUN/ENABLED": "Best Run",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Accurate Percentage",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "Only from Current %",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Accuracy",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Show prefix",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip Deaths",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Frame Counter",
   "STATUS/POSITION/ENABLED": "Position",
   "STATUS/REPLAY_STATE/ENABLED": "Replay State",
+  "STATUS/SESSION_TIME/ENABLED": "Session Time",
   "REPLAY": "Replay",
   "REPLAY/FILE": "Select Macro",
   "REPLAY/OPEN": "Open Macro",
