--- a/langs/es-CL.json
+++ b/langs/es-CL.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "¿Estas seguro de cerrar sesion waton?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "¿Estas seguro waton de cargar un guardado antiguo?",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Cerraste Sesion Exitosamente, sangre.",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Pantalla completa detenida.",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tienes cambios no guardados en tu macro, estas seguro de borrarlos y empezar de cero?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "¿Estas seguro waton de borrar la macro seleccionada?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "Vacio papito",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Niveles Principales",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Desbloquea los niveles demon principales",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Personalizador de Música",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Sin Brillo",
   "COSMETIC/HACK_NO_GLOW/TIP": "Desactiva el efecto de brillo en todos los objetos",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Sin Espejo",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Desactiva el efecto de portal de espejo",
   "COSMETIC/HACK_NO_ORB_RING": "Sin Anillo de Orbe",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Desactiva los shaders dentro del nivel",
   "COSMETIC/HACK_NO_SHAKE": "Sin Sacudidas",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Desactiva los activadores de sacudida",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Sin Estela",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Deja la estela siempre apagada",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Sin Pulso de Onda",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Tiempo de Reaparición",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Cambia el tiempo de reaparición del jugador",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ignorar hack de velocidad",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Rellenar Hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Peligros",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacidad",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Implementación clásica de pantalla completa sin bordes (distinta a la propia de GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Pantalla Completa",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Permite que el juego llene tu pantalla principal",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusivo",
   "DISPLAY/FULLSCREEN/COMBO/1": "Sin Bordes",
   "UTILITY": "Utilidad",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Captura de Pantalla",
   "SCREENSHOT/SCREENSHOT": "Captura de Pantalla",
   "SCREENSHOT/SCREENSHOT/TIP": "Toma una captura de pantalla",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Guardar y copiar",
   "SCREENSHOT/COMBO/1": "Copiar al portapapeles",
   "SCREENSHOT/COMBO/2": "Guardar en archivo",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Abajo-derecha",
   "STATUS/*/MOVE/DOWN": "Abajo",
   "STATUS/*/MOVE/UP": "Arriba",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Mostrar unidades",
   "STATUS/MESSAGE/ENABLED": "",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostrar total",
   "STATUS/BEST_RUN/ENABLED": "Mejor Carrera",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Precisión de Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostrar prefijo",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Muertes de Noclip",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Contador de fotogrmas",
   "STATUS/POSITION/ENABLED": "Posicion",
   "STATUS/REPLAY_STATE/ENABLED": "Estado de repeticion",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Repeticion",
   "REPLAY/FILE": "Archivo",
   "REPLAY/OPEN": "Abrir",
