--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "¿Quieres cerrar la sesión del Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "¿Quieres cargar los ajustes que tenías en el Mega Hack v8? Esto sobrescribirá la configuración que actualmente tengas",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "¡Sesión cerrada! Puedes seguir usando el Mega Hack hasta que reinicies el juego",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Por favor, hay que salir de la «play-layer» / del editor para poder cambiar el modo de pantalla completa",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tienes cambios sin guardar en tu macro, ¿quieres borrarlos y volver a empezar de cero?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "¿Quieres borrar el macro seleccionado?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Deshabilita los atajos del Mega Hack mientras el editor de niveles está en uso",
   "KEYBINDS/EMPTY": "Sin atajo",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Niveles principales",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Desbloquea los niveles demons principales",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Desbloquear música",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Desactivar glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Desactiva el efecto de brillo de todos los objetos",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Desactivar espejo",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Desactiva el efecto de los portales de espejo",
   "COSMETIC/HACK_NO_ORB_RING": "Desactivar anillas de orbes",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Desactiva los shaders en el nivel",
   "COSMETIC/HACK_NO_SHAKE": "Desactivar temblor",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Desactiva los triggers de temblor",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Desactivar estela",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Desactiva la estela globalmente",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Desactiva pulso del wave",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Lapso de reaparición",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Cambia el tiempo de reaparición del jugador",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ignorar speedhack",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Rellenar hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Obstáculos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacidad",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Implementación clásica de pantalla sin bordes (Diferente a la implementación de GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Pantalla completa",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Muestra el juego en pantalla completa",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusivo",
   "DISPLAY/FULLSCREEN/COMBO/1": "Sin bordes",
   "UTILITY": "Utilidades",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Captura de pantalla",
   "SCREENSHOT/SCREENSHOT": "Tomar captura",
   "SCREENSHOT/SCREENSHOT/TIP": "Toma una captura de pantalla de la ventana del juego",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Guardar y copiar",
   "SCREENSHOT/COMBO/1": "Copiar al portapapeles",
   "SCREENSHOT/COMBO/2": "Guardar archivo",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Abajo derecha",
   "STATUS/*/MOVE/DOWN": "Abajo",
   "STATUS/*/MOVE/UP": "Arriba",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Mostrar unidades",
   "STATUS/MESSAGE/ENABLED": "Mensaje",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mensaje",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostrar totales",
   "STATUS/BEST_RUN/ENABLED": "Mejor run",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Accuracy",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostrar prefijo",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Muertes en noclip",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Contador de fotogramas",
   "STATUS/POSITION/ENABLED": "Posición",
   "STATUS/REPLAY_STATE/ENABLED": "Estado de replay",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Replay",
   "REPLAY/FILE": "Seleccionar macro",
   "REPLAY/OPEN": "Abrir macro",
