--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack saioa itxi nahi al duzu?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Jadanik zenituen Mega Hack v8-ko ezarpenak kargatzea nahi al dituzu? Honek orain dituzun ezarpenak berridatziko ditu",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Saioa itxita! Mega Hack erabiltzea jarraitu ahal duzu berrabiarazi arte",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Mesedez, joku-geruzatik/editoretik irten behar duzu pantaila osoko modua aldatzeko",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Zure makroan gorde gabeko aldaketak dituzu. Garbitzea eta berriro hastea ziur nahi al duzu?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Hautatutako makroa ezabatzeko ziur al zaude?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Mega Hack-eko lasterbideak desgaitzen ditu maila editorea erabiltzean",
   "KEYBINDS/EMPTY": "Hutsik",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Maila Nagusiak",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Demon maila nagusiak desblokeatzen ditu.",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Musika Desblokeatu",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Glow-rik Ez",
   "COSMETIC/HACK_NO_GLOW/TIP": "Objektu guztietan, glow efektua desgaitzen du",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Ispilurik Ez",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Ispilu-portalaren efektua desgaitzen du",
   "COSMETIC/HACK_NO_ORB_RING": "Orbe-Eraztunik Ez",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Mailen barruko shader-ak desgaitzen ditu",
   "COSMETIC/HACK_NO_SHAKE": "Dardararik Ez",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Shake trigger-ak desgaitzen ditu",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Aztarnarik Ez",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Jokalariaren aztarna desgaitzen du, beti",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wave-Taupadarik Ez",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Berragertze-Denbora",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Jokalariaren berragertze-denobra aldatzen du",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Speedhack Kontuan Ez Hartu",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Hitbox-ak Bete",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Arriskuak",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Gardentasuna",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Pantaila mugagabeko inplementazio klasikoa (GD-ko inplementazioarekiko bereiztua)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Pantaila Osoa",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Jokua pantaila osoan erakusten da",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Esklusiboa",
   "DISPLAY/FULLSCREEN/COMBO/1": "Mugagabekoa",
   "UTILITY": "Tresneria",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Pantaila-Argazkia",
   "SCREENSHOT/SCREENSHOT": "Pantaila-Argazkia",
   "SCREENSHOT/SCREENSHOT/TIP": "Pantaila-Argazki bat ateratzen du",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Gorde eta kopiatu",
   "SCREENSHOT/COMBO/1": "Arbelera kopiatu",
   "SCREENSHOT/COMBO/2": "Fitxategira gorde",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Behe-Eskuina",
   "STATUS/*/MOVE/DOWN": "Behera",
   "STATUS/*/MOVE/UP": "Gora",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Unitateak Erakutsi",
   "STATUS/MESSAGE/ENABLED": "Mezua",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mezua",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Guztira Erakutsi",
   "STATUS/BEST_RUN/ENABLED": "Run Onena",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Zehaztasuna",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Aurrizkia Erakutsi",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip Hiltzeak",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Fotograma-Kontadorea",
   "STATUS/POSITION/ENABLED": "Posizioa",
   "STATUS/REPLAY_STATE/ENABLED": "Replay Egoera",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Replay",
   "REPLAY/FILE": "Errepikapena Hautatu",
   "REPLAY/OPEN": "Errepikapena Ireki",
