--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Êtes-vous sûr de vouloir vous déconnecter de Mega Hack ?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Déconnexion réussie ! Vous pouvez continuer à utiliser Mega Hack jusqu'au redémarrage",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Veuillez quitter le mode jeu/éditeur avant d'activer/désactiver le plein écran",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Vous avez des modifications non enregistrées dans votre macro. Êtes-vous sûr de vouloir tout effacer et recommencer ?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Êtes-vous sûr de vouloir supprimer la macro sélectionnée ?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "N/A",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Niveaux Démons Officiels",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Débloque les niveaux Démons Officiels",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Déblocage des musiques",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Pas de lueur",
   "COSMETIC/HACK_NO_GLOW/TIP": "Désactive la lueur sur tous les objets",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Pas de miroir",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Désactive les effets du portail miroir",
   "COSMETIC/HACK_NO_ORB_RING": "Pas d'anneau d'orbe",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Désactive les shaders des niveaux",
   "COSMETIC/HACK_NO_SHAKE": "Pas de Secousse",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Désactive les déclencheurs de secousse",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Pas de Traînée",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Désactive la traînée du personnage",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Pulsation de la Wave",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Temps de réapparition",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Modifie le temps de réapparition du personnage",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ignorer Speedhack",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Remplir les Hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Dangers",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacité ",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Implémentation du mode Fenêtré sans bordures classique (séparée de l'implémentation propre à GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Plein Écran",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Permet au jeu de remplir votre écran principal",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusif",
   "DISPLAY/FULLSCREEN/COMBO/1": "Sans Bordures",
   "UTILITY": "Utilitaires",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Capture d'écran",
   "SCREENSHOT/SCREENSHOT": "Capture d'écran",
   "SCREENSHOT/SCREENSHOT/TIP": "Prend une capture d'écran",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Enregistrer et Copier",
   "SCREENSHOT/COMBO/1": "Copier dans presse-papiers",
   "SCREENSHOT/COMBO/2": "Enregistrer dans Fichier",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Inférieur Droit",
   "STATUS/*/MOVE/DOWN": "Bas",
   "STATUS/*/MOVE/UP": "Haut",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Afficher unités",
   "STATUS/MESSAGE/ENABLED": "",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Afficher Total",
   "STATUS/BEST_RUN/ENABLED": "Meilleure tentative",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Précision Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Afficher Préfix",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Morts Noclip",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Compteur d'images",
   "STATUS/POSITION/ENABLED": "Position",
   "STATUS/REPLAY_STATE/ENABLED": "État du Replay",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Replay",
   "REPLAY/FILE": "Sélectionner la macro",
   "REPLAY/OPEN": "Ouvrir la macro",
