--- a/langs/ga-IE.json
+++ b/langs/ga-IE.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "",
   "BYPASS": "Seachbhóthar",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Príomhleibhéil",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Díghlasáiltear Príomhleibhéil Dheaman",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Díghlasálaí Ceoil",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
   "COSMETIC/HACK_NO_MIRROR/TIP": "",
   "COSMETIC/HACK_NO_ORB_RING": "",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Díchumasaigh sé scáthaitheoirí in-leibhéil",
   "COSMETIC/HACK_NO_SHAKE": "Uimh Croith",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Díchumasaigh truicear croith",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Uimh Conaire",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Baineann sé an rian",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Uimh Cuisle Tonn",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Am Athspawnáil",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Athraíonn sé an t-am a thógann sé ar an imreoir athspawnáil",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Líon Hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Guaiseacha",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Teimhneacht",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Cur i bhfeidhm clasaiceach lánscáileáin gan teorainn (ar leith ó chur i bhfeidhm Geometry Dash féin)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Lánscáileán",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Ligeann sé don chluiche do phríomhthaispeántas a líonadh",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Eisiach",
   "DISPLAY/FULLSCREEN/COMBO/1": "Gan teorainn",
   "UTILITY": "Fóntas",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Scáileáin",
   "SCREENSHOT/SCREENSHOT": "Scáileáin",
   "SCREENSHOT/SCREENSHOT/TIP": "Glacann sé scáileán",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "",
   "SCREENSHOT/COMBO/1": "Cóip chuig an nGearrthaisce",
   "SCREENSHOT/COMBO/2": "",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "",
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "",
   "STATUS/MESSAGE/ENABLED": "",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "",
   "STATUS/BEST_RUN/ENABLED": "",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
   "STATUS/NOCLIP_DEATHS/ENABLED": "",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "",
   "STATUS/POSITION/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "",
   "REPLAY/FILE": "",
   "REPLAY/OPEN": "",
