--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Biztosan kilépsz a Mega Hack-ből?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Biztosan betöltöd a Mega Hack beállításaidat? Ez átírja a mostani beállításaidat!",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Sikeresen kiléptél! Használhatod a Mega Hack-et amíg újra nem indítod a játékot.",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Teljes képernyős mód befejeződött",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "A visszajátzásodban vannak nem lementett változtatások, biztos kitörlöd és kezdesz egy újat?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Biztosan kitörlöd a kiválasztott visszajátszást?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Az editorbabn nem fognak működni a gyorsbillentyűk",
   "KEYBINDS/EMPTY": "Üres",
   "BYPASS": "Kitérő",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "A 3 alap démon feloldása",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Feloldja az alap 3 Démon pályákat",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Zene Feloldó",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Nincs glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Leszedi a glowot az ikonodról",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Nincs irány fordító portal",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Kikapcsolja a irány fordító portalokat",
   "COSMETIC/HACK_NO_ORB_RING": "Nincs orb karika",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Kikapcsolja a pályán belüli shadereket",
   "COSMETIC/HACK_NO_SHAKE": "Nincs rázkódás",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Kikapcsolja a rázkódás triggereket",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Nyomvonal kikapcsolása",
   "COSMETIC/HACK_NO_TRAIL/TIP": "A játékos utáni nyomvonalat kikapcsolja",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wave Pulzálás kikapcsolása",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Újraéledési idő",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Megváltoztatja a játékos újraéledési idejét",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Speedhack ignorálása",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Hitboxok kitöltése",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Veszélyes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Átlátszatlanság",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Teljes képernyős ablak mint MHv7-ben",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Teljes képernyő",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "önmagát magyarázza",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Ablakos",
   "DISPLAY/FULLSCREEN/COMBO/1": "Exklúzív",
   "UTILITY": "Egyebek",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Képernyőfelvétel",
   "SCREENSHOT/SCREENSHOT": "Képernyőfelvétel",
   "SCREENSHOT/SCREENSHOT/TIP": "Csinál egy képernyőfotót",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Kombó 0",
   "SCREENSHOT/COMBO/1": "Kombó 1",
   "SCREENSHOT/COMBO/2": "Kombó 3",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Jobb lent",
   "STATUS/*/MOVE/DOWN": "Le",
   "STATUS/*/MOVE/UP": "Fel",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Egységek mutatása",
   "STATUS/MESSAGE/ENABLED": "Üzenet",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Üzenet",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Összes kattintások",
   "STATUS/BEST_RUN/ENABLED": "Legjobb run",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip pontosság",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Prefix mutatása",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip halálok",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Képkocka",
   "STATUS/POSITION/ENABLED": "Pozíció",
   "STATUS/REPLAY_STATE/ENABLED": "Visszajátszási státusz",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Visszajátszás",
   "REPLAY/FILE": "Fájl",
   "REPLAY/OPEN": "Megnyitás",
