--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Eseguire il log out da Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Log out eseguito con successo! Puoi usare Mega Hack fino al riavvio",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Ci sono cambiamenti non salvati, procedere con lo svuotamento e creazione di una nuova?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Si vuole eliminare la macro selezionata?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "N/A",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Livelli Principali",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Sblocca i Demon principali",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Customizer Musica",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "No Glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Rimuove l'effetto glow di tutti gli oggetti",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "No Specchio",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Rimuove l'effetto dei portali mirror",
   "COSMETIC/HACK_NO_ORB_RING": "No Orb Ring",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Disabilita gli shader nei livelli",
   "COSMETIC/HACK_NO_SHAKE": "No Shake",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Disabilita i trigger di shake",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "No Scia",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Tiene la scia sempre disattivata",
   "COSMETIC/HACK_NO_WAVE_PULSE": "No Pulsazione Wave",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Tempo di Respawn",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Modifica il tempo di respawn del giocatore",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Riempimento Hitbox",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Pericoli",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacità",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Implementazione classica dello schermo intero (separato all'implementazione propria di GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Schermo intero",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Mette schermo intero",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusive",
   "DISPLAY/FULLSCREEN/COMBO/1": "Borderless",
   "UTILITY": "Utilità",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Screenshot",
   "SCREENSHOT/SCREENSHOT": "Screenshot",
   "SCREENSHOT/SCREENSHOT/TIP": "Fa uno screenshot",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Salva e copia",
   "SCREENSHOT/COMBO/1": "Copia negli appunti",
   "SCREENSHOT/COMBO/2": "Salva su file",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Basso a destra",
   "STATUS/*/MOVE/DOWN": "Sotto",
   "STATUS/*/MOVE/UP": "Sopra",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Mostra misure",
   "STATUS/MESSAGE/ENABLED": "",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostra totali",
   "STATUS/BEST_RUN/ENABLED": "Run migliore",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Accuratezza Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Mostra prefisso",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Morti Noclip",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Contatore Frame",
   "STATUS/POSITION/ENABLED": "Posizione",
   "STATUS/REPLAY_STATE/ENABLED": "Stato del replay",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Replay",
   "REPLAY/FILE": "Scegli Macro",
   "REPLAY/OPEN": "Apri Macro",
