--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack에서 로그아웃하시겠습니까?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Mega Hack 8 버전의 설정을 불러오시겠습니까? 현재 설정을 덮어씁니다.",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "성공적으로 로그아웃되었습니다! 재시작하기 전까지 Mega Hack을 사용하실 수 있습니다.",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "전체 화면으로 전환하기 전에 플레이 레이어/에디터를 종료해 주세요.",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "매크로에 저장되지 않은 변경 사항이 있습니다. 지우고 새로 시작하시겠습니까?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "선택한 매크로를 삭제하시겠습니까?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "레벨 에디터 사용 중 Mega Hack 키 바인드를 비활성화합니다.",
   "KEYBINDS/EMPTY": "해당 사항 없음",
   "BYPASS": "우회",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "메인 레벨",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "메인 데몬 레벨을 잠금 해제합니다.",
   "BYPASS/HACK_MUSIC_UNLOCKER": "음악 잠금 해제",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "글로우 비활성화",
   "COSMETIC/HACK_NO_GLOW/TIP": "모든 오브젝트의 글로우 이펙트를 비활성화합니다.",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "좌우 반전 비활성화",
   "COSMETIC/HACK_NO_MIRROR/TIP": "좌우 반전 포탈 이펙트를 비활성화합니다.",
   "COSMETIC/HACK_NO_ORB_RING": "공점 링 비활성화",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "레벨 내 셰이더를 비활성화합니다.",
   "COSMETIC/HACK_NO_SHAKE": "흔들기 비활성화",
   "COSMETIC/HACK_NO_SHAKE/TIP": "흔들기 트리거를 비활성화합니다.",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "트레일 비활성화",
   "COSMETIC/HACK_NO_TRAIL/TIP": "트레일을 항상 꺼짐으로 설정합니다.",
   "COSMETIC/HACK_NO_WAVE_PULSE": "웨이브 펄스 비활성화",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "리스폰 시간",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "플레이어 리스폰 시간을 변경합니다.",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "스피드핵 무시",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "히트박스 채우기",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "위험",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "불투명도",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "테두리 없는 전체 화면을 클래식으로 구현합니다.(GD 자체 구현과 별개)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "전체 화면",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "게임이 기본 디스플레이를 가득 채웁니다.",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "독점",
   "DISPLAY/FULLSCREEN/COMBO/1": "테두리 없는 창 모드",
   "UTILITY": "유틸리티",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "스크린샷",
   "SCREENSHOT/SCREENSHOT": "스크린샷",
   "SCREENSHOT/SCREENSHOT/TIP": "스크린샷을 찍습니다.",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "저장 & 복사",
   "SCREENSHOT/COMBO/1": "클립보드에 복사",
   "SCREENSHOT/COMBO/2": "파일에 저장",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "우측 하단",
   "STATUS/*/MOVE/DOWN": "아래로",
   "STATUS/*/MOVE/UP": "위로",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "단위 표시",
   "STATUS/MESSAGE/ENABLED": "메시지",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "메시지",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "합계 표시",
   "STATUS/BEST_RUN/ENABLED": "최고 기록",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "정확한 퍼센트",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "노클립 정확도",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "접두사 표시",
   "STATUS/NOCLIP_DEATHS/ENABLED": "노클립 사망 수",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "프레임 카운터",
   "STATUS/POSITION/ENABLED": "위치",
   "STATUS/REPLAY_STATE/ENABLED": "리플레이 상태",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "리플레이",
   "REPLAY/FILE": "매크로 선택",
   "REPLAY/OPEN": "매크로 열기",
