--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Czy na pewno chcesz wylogować się z Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Czy na pewno chcesz załadować ustawienia Mega Hack v8? Nadpisze to Twoją aktualną konfigurację",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Pomyślnie wylogowano! Możesz używać Mega Hack do momentu restartu",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Wyjdź z play-layer/edytora przed zmianą trybu pełnoekranowego",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Masz niezapisane zmiany w swoim makro, czy na pewno chcesz zacząć od początku?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Czy na pewno chcesz usunąć wybrane makro?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Wyłącza skróty klawiszowe Mega Hack podczas używania edytora poziomów",
   "KEYBINDS/EMPTY": "BRAK",
   "BYPASS": "Obejścia",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Główne poziomy",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Odblokowuje główne demony",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Music Customiser",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Wyłącz Poświatę",
   "COSMETIC/HACK_NO_GLOW/TIP": "Wyłącza efekt poświaty na wszystkich obiektach",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Wyłącz Mirror",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Wyłącza efekt portalu mirror (lustrzanego odbicia)",
   "COSMETIC/HACK_NO_ORB_RING": "Wyłącz Pierścienie Orbów",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Wyłącza shadery w poziomach",
   "COSMETIC/HACK_NO_SHAKE": "Wyłącz Drganie Kamery",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Wyłącza triggery drgania kamery",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Wyłącz Trail",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Ustawia trail za graczem na zawsze wyłączony",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wyłącz Puls Wave",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Czas Odradzania",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Zmienia czas odrodzenia gracza",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ignoruj Speedhack",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Wypełnienie Hitboxów",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Zagrożenia",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Nieprzezroczystość",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Klasyczna implementacja bezramkowego trybu pełnoekranowego (oddzielna od implementacji gry)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Pełny Ekran",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Pozwala grze zająć główny monitor",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Ekskluzywny",
   "DISPLAY/FULLSCREEN/COMBO/1": "Bezramkowy",
   "UTILITY": "Narzędzia",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Zrzut Ekranu",
   "SCREENSHOT/SCREENSHOT": "Zrzut Ekranu",
   "SCREENSHOT/SCREENSHOT/TIP": "Robi zrzut ekranu gry",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Zapisz i kopiuj",
   "SCREENSHOT/COMBO/1": "Kopiuj do schowka",
   "SCREENSHOT/COMBO/2": "Zapisz do pliku",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Prawy Dolny Róg",
   "STATUS/*/MOVE/DOWN": "Dół",
   "STATUS/*/MOVE/UP": "Góra",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Pokaż jednostki",
   "STATUS/MESSAGE/ENABLED": "Wiadomość",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Wiadomość",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Pokaż łączne",
   "STATUS/BEST_RUN/ENABLED": "Najlepsza Próba",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Dokładność Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Pokaż prefiks",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Śmierci Noclip",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Licznik Klatek",
   "STATUS/POSITION/ENABLED": "Pozycja",
   "STATUS/REPLAY_STATE/ENABLED": "Status Replay",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Replay",
   "REPLAY/FILE": "Zaznacz Makro",
   "REPLAY/OPEN": "Otwórz Makro",
