--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Você tem certeza que deseja deslogar do Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Deslogado com sucesso! Você ainda pode usar o Mega Hack até reiniciar o jogo",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Por favor saia da camada de jogo/editor antes de ativar a tela cheia",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Você possui mudanças não salvas no macro atual, tem certeza que deseja limpar?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Você tem certeza que deseja deletar o macro atual?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Desativa as teclas de atalho do Mega Hack enquanto usa o editor de fases",
   "KEYBINDS/EMPTY": "",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Fases principais",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Debloqueia todas as fases demons principais",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Desbloqueador de música",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Sem glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Desativa o efeito de glow em todos os objetos",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Sem portal de espelho",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Desativa o efeito do portal de espelho",
   "COSMETIC/HACK_NO_ORB_RING": "",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Desabilita shaders em fases",
   "COSMETIC/HACK_NO_SHAKE": "Sem Agitação",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Desabilita triggers de agitação",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Sem Trilha",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Define a trilha para sempre desligada",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Sem Pulso da Wave",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Tempo de Respawn",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Altera o tempo de respawn do jogador",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ignorar Speedhack",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Preencher Hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Perigos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacidade",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Implementação clássica de sem borda em tela cheia",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Tela cheia",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Permite que o jogo preencha sua tela principal",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusivo",
   "DISPLAY/FULLSCREEN/COMBO/1": "Sem borda",
   "UTILITY": "Utilidade",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Captura de tela",
   "SCREENSHOT/SCREENSHOT": "Captura de tela",
   "SCREENSHOT/SCREENSHOT/TIP": "Tira uma captura de tela",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "",
   "SCREENSHOT/COMBO/1": "Copiar para Área de Transferência",
   "SCREENSHOT/COMBO/2": "",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "",
   "STATUS/*/MOVE/DOWN": "Baixo",
   "STATUS/*/MOVE/UP": "Cima",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Mostrar unidades",
   "STATUS/MESSAGE/ENABLED": "Mensagem",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mensagem",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Mostrar total",
   "STATUS/BEST_RUN/ENABLED": "Melhor Tentativa",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Precisão do Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Mortes em Noclip",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Contador de frames",
   "STATUS/POSITION/ENABLED": "Posição",
   "STATUS/REPLAY_STATE/ENABLED": "Estado do Replay",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "",
   "REPLAY/FILE": "Selecionar Macro",
   "REPLAY/OPEN": "Abrir Macro",
