--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack oturumunuzu kapatmak istediğinize emin misiniz?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Mega Hack v8 ayarlarınızı yüklemek istediğinize emin misiniz? Şuan ki ayarlarınız silinecektir.",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Başarıyla oturum kapatıldı! Yeniden başlatlana kadar Mega Hack kullanabilirsiniz.",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Tam Ekran moduna geçmeden önce lütfen seviyeden veya editörden çıkınız.",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Makronuzda kaydedilmemiş değişiklikler var, silip yeniden başlamak istediğinizden emin misiniz?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Seçilen makroyu silmek istediğinizden emin misiniz?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Mega Hack üzerinden yapılan tuş atamalarını editörde devre dışı bırakır",
   "KEYBINDS/EMPTY": "N/A",
   "BYPASS": "Baypas",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Ana Seviyeler",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Ana demon seviyelerin kilidini açar",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Müzik Özelleştirici",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Parlama Yok",
   "COSMETIC/HACK_NO_GLOW/TIP": "Bütün objelerdeki parlamayı kaldırır",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Ayna Yok",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Ayna portal efektini kaldırır",
   "COSMETIC/HACK_NO_ORB_RING": "Orb Halkası Yok",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Seviye içi gölgelendirme efektlerini devre dışı bırakır",
   "COSMETIC/HACK_NO_SHAKE": "Sarsıntı Durdur",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Sarsıntı triggerlarını devre dışı bırakır",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "İzi Gizle",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Oyuncunun izini kaldırır",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wave Nabzını Durdur",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Yeniden Doğma Süresi",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Oyuncunun yeniden doğma süresini değiştirir",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Speedhack Yoksay",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Hitboxları Doldur",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Tehlikeler",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opaklık",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Kenarsız tam ekranın klasik uygulanması (GD'nin kendi uygulamasından ayrı)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Tam Ekran",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Oyunun ana ekranınızı doldurmasına izin verir.",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Özel",
   "DISPLAY/FULLSCREEN/COMBO/1": "Kenarsız",
   "UTILITY": "Araçlar",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Ekran Görüntüsü",
   "SCREENSHOT/SCREENSHOT": "Ekran Görüntüsü",
   "SCREENSHOT/SCREENSHOT/TIP": "Ekran görüntüsü alır",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Kaydet & kopyala",
   "SCREENSHOT/COMBO/1": "Pano'ya kopyala",
   "SCREENSHOT/COMBO/2": "Dosyaya kaydet",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Sağ Alt",
   "STATUS/*/MOVE/DOWN": "Aşağı",
   "STATUS/*/MOVE/UP": "Yukarı",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Birimleri göster",
   "STATUS/MESSAGE/ENABLED": "Mesaj",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mesaj",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Toplamı göster",
   "STATUS/BEST_RUN/ENABLED": "En İyi Deneme",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Doğruluğu",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Ön Eki göster",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip Ölümleri",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Frame Sayacı",
   "STATUS/POSITION/ENABLED": "Pozisyon",
   "STATUS/REPLAY_STATE/ENABLED": "Makro Durumu",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Makro",
   "REPLAY/FILE": "Makro Seç",
   "REPLAY/OPEN": "Makro AÇ",
