--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Bạn có chắc chắn muốn đăng xuất khỏi Mega Hack không?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Đăng xuất thành công! Bạn có thể dùng Mega Hack cho đến khi khởi động lại game",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "",
   "BYPASS": "Bypass",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Các level chính",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Mở khóa các demon level",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Mở khóa nhạc",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
   "COSMETIC/HACK_NO_MIRROR/TIP": "",
   "COSMETIC/HACK_NO_ORB_RING": "",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Tắt các hiệu ứng shader trong level",
   "COSMETIC/HACK_NO_SHAKE": "Không rung lắc",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Vô hiệu hóa các shake trigger",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Tắt trail",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Tắt các trail của player",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Tắt Wave Pulse",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Thời gian hồi sinh",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Thay đổi thời gian hồi sinh của player",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Tô đầy Hitbox",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Các chướng ngại vật",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Độ mờ",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Borderless fullscreen kiểu cũ (khác với kiểu của GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Toàn màn hình",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Chơi game ở chế độ toàn màn hình",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exclusive",
   "DISPLAY/FULLSCREEN/COMBO/1": "Borderless",
   "UTILITY": "Tiện ích",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Ảnh màn hình",
   "SCREENSHOT/SCREENSHOT": "Ảnh màn hình",
   "SCREENSHOT/SCREENSHOT/TIP": "Chụp màn hình",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Lưu và sao chép",
   "SCREENSHOT/COMBO/1": "Lưu vào bảng nhớ tạm",
   "SCREENSHOT/COMBO/2": "Lưu vào ổ cứng",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "",
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "",
   "STATUS/MESSAGE/ENABLED": "",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Hiện tổng",
   "STATUS/BEST_RUN/ENABLED": "",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Độ chính xác Noclip",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Số lần chết trong Noclip",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "",
   "STATUS/POSITION/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "",
   "REPLAY/FILE": "Chọn macro",
   "REPLAY/OPEN": "Mở macro",
