--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "要退出Mega Hack吗？",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "成功登出！重启前仍可使用 Mega Hack",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "请先退出游戏层/编辑器再切换全屏",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "macro中有未保存的更改，确定要清空并重新开始吗?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "确定要删除所选marco吗?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "无",
   "BYPASS": "解除限制",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "主关卡",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "解锁所有官方关卡",
   "BYPASS/HACK_MUSIC_UNLOCKER": "音乐自定义",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "无Glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "去除物体Glow效果",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "无Mirror",
   "COSMETIC/HACK_NO_MIRROR/TIP": "禁用Mirror门效果",
   "COSMETIC/HACK_NO_ORB_RING": "无Ring",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "禁用关卡内Shaders",
   "COSMETIC/HACK_NO_SHAKE": "无Shake",
   "COSMETIC/HACK_NO_SHAKE/TIP": "禁用Shake效果",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "无玩家尾迹",
   "COSMETIC/HACK_NO_TRAIL/TIP": "禁用玩家设置的尾迹",
   "COSMETIC/HACK_NO_WAVE_PULSE": "无Wave Pulse",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "复活时间",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "改变复活时间",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "忽略变速",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "填充碰撞箱",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "有害类",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "不透明度",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "经典方法实现无边框,区别于内置无边框",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "全屏",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "游戏全屏",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "独占全屏",
   "DISPLAY/FULLSCREEN/COMBO/1": "无边框",
   "UTILITY": "功能",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "截屏",
   "SCREENSHOT/SCREENSHOT": "截屏",
   "SCREENSHOT/SCREENSHOT/TIP": "截个图",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "保存并复制到粘贴板",
   "SCREENSHOT/COMBO/1": "复制到粘贴板",
   "SCREENSHOT/COMBO/2": "另存为",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "右下角",
   "STATUS/*/MOVE/DOWN": "下移",
   "STATUS/*/MOVE/UP": "上移",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "显示单位",
   "STATUS/MESSAGE/ENABLED": "",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "显示CPS总数",
   "STATUS/BEST_RUN/ENABLED": "最佳进度",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip accuracy",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "显示前缀",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip死亡次数",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "帧计数器",
   "STATUS/POSITION/ENABLED": "位置",
   "STATUS/REPLAY_STATE/ENABLED": "Repaly中",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Replay",
   "REPLAY/FILE": "选择",
   "REPLAY/OPEN": "打开",
