--- a/langs/zh-HK.json
+++ b/langs/zh-HK.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "",
   "BYPASS": "解除限制",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "解除主關卡",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "解鎖所有主惡魔關卡",
   "BYPASS/HACK_MUSIC_UNLOCKER": "音樂自定義",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "無物體光亮",
   "COSMETIC/HACK_NO_GLOW/TIP": "去除物體光亮",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "無轉鏡子特效",
   "COSMETIC/HACK_NO_MIRROR/TIP": "禁用轉鏡子特效",
   "COSMETIC/HACK_NO_ORB_RING": "無球體特效",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "禁用關卡內着色器",
   "COSMETIC/HACK_NO_SHAKE": "無相機搖動",
   "COSMETIC/HACK_NO_SHAKE/TIP": "禁用相機搖動特效",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "無玩家尾跡",
   "COSMETIC/HACK_NO_TRAIL/TIP": "禁用玩家設尾跡",
   "COSMETIC/HACK_NO_WAVE_PULSE": "無箭號尾跡跳動",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "復活時間",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "調玩家復活時間",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "填充碰撞箱",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "有害 (包括鋸)",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "不透明度",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "原始方法的無邊框, 區別於內置無邊框",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "全屏",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "遊戲全屏",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "獨佔全屏",
   "DISPLAY/FULLSCREEN/COMBO/1": "無邊框",
   "UTILITY": "功能",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "截屏",
   "SCREENSHOT/SCREENSHOT": "截屏",
   "SCREENSHOT/SCREENSHOT/TIP": "截個圖",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "保存並複製到粘貼板",
   "SCREENSHOT/COMBO/1": "複製到粘貼板",
   "SCREENSHOT/COMBO/2": "存到文件",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "右下角",
   "STATUS/*/MOVE/DOWN": "下移",
   "STATUS/*/MOVE/UP": "上移",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "顯示單位",
   "STATUS/MESSAGE/ENABLED": "",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "顯示CPS總數",
   "STATUS/BEST_RUN/ENABLED": "最佳進度",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Noclip準確性",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip死亡次數",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "",
   "STATUS/POSITION/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "",
   "REPLAY/FILE": "",
   "REPLAY/OPEN": "",
