--- a/langs/LIVE.json
+++ b/langs/LIVE.json
@@ -7,9 +7,9 @@
   "NX/COLOUR/R/PRE": "R",
   "NX/COLOUR/S/PRE": "S",
   "NX/COLOUR/V/PRE": "V",
-  "CHEAT_SAFETY/RULESET/0": "Mega Hack",
-  "CHEAT_SAFETY/RULESET/1": "Demon List",
-  "CHEAT_SAFETY/RULESET/2": "Leaderboards",
+  "*/RULESET*/0": "Mega Hack",
+  "*/RULESET*/1": "Demon List",
+  "*/RULESET*/2": "Leaderboards",
   "HOME": "Mega Hack",
   "HOME/THEME/0/TOGGLE": "Nona",
   "HOME/THEME/1/TOGGLE": "Nona Lux",
