--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
   "KEYBINDS/EMPTY": "",
   "BYPASS": "Ξεκλείδωμα",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Κύρια Επίπεδα",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Ξεκλειδώνει τα κύρια επίπεδα δαίμονα",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Ξεκλείδωμα μουσικής",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Οχι Glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
   "COSMETIC/HACK_NO_MIRROR/TIP": "",
   "COSMETIC/HACK_NO_ORB_RING": "",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Απενεργοποιεί τους shaders σε επίπεδο",
   "COSMETIC/HACK_NO_SHAKE": "Χωρίς Κούνημα",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Απενεργοποιεί τις σκανδάλες ανακίνησης",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Χωρίς Μονοπάτι",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Ορίζει το ίχνος σε πάντα απενεργοποιημένο",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Χωρίς παλμό κυμάτων",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Χρόνος αναγέννησης",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Αλλάζει τον χρόνο επαναπροώθησης του παίκτη",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Αγνόησε Speedhack",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Γέμισε hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Επικίνδυνα",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Αδιαφάνεια",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "",
   "DISPLAY/FULLSCREEN/COMBO/1": "",
   "UTILITY": "",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "",
   "SCREENSHOT/SCREENSHOT": "",
   "SCREENSHOT/SCREENSHOT/TIP": "",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "",
   "SCREENSHOT/COMBO/1": "",
   "SCREENSHOT/COMBO/2": "",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "",
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "",
   "STATUS/MESSAGE/ENABLED": "",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "",
   "STATUS/BEST_RUN/ENABLED": "",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
   "STATUS/NOCLIP_DEATHS/ENABLED": "",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "",
   "STATUS/POSITION/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Επανάληψη",
   "REPLAY/FILE": "Αρχείο",
   "REPLAY/OPEN": "Ανοίγμα",
