--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -27,6 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Ви дійсно хочете вийти з акаунту Mega Hack?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Ви дійсно хочете імпортувати налаштування з Mega Hack v8? Ваші попередні налаштування буде повністю перезаписано",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Ви успішно вийшли з акаунту Mega Hack! Ви можете користуватися ним до перезапуску гри",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Будь ласка, вийдіть з рівня/редактора перед увімкненням повноекранного режиму",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "У вас є незбережені зміни у вашому макросі, ви дійсно хочете стерти й почати з нуля?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Ви дійсно хочете видалити цей макрос?",
@@ -68,6 +69,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Деактивує всі гарячі клавіші Mega Hack під час використання редактора",
   "KEYBINDS/EMPTY": "н/в",
   "BYPASS": "Байпаси",
+  "BYPASS/HACK_ANTI_KICK": "",
+  "BYPASS/HACK_ANTI_KICK/TIP": "",
   "BYPASS/HACK_MAIN_LEVELS": "Офіційні рівні",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Відкриває офіційні демони",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Розблокувальник музики",
@@ -120,6 +123,8 @@
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Деакт. світіння",
   "COSMETIC/HACK_NO_GLOW/TIP": "Деактивує світіння у всіх об'єктів",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "Деакт. віддзеркалення",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Деактивує ефект порталу віддзеркалення",
   "COSMETIC/HACK_NO_ORB_RING": "Деакт. кілець орбів",
@@ -163,6 +168,8 @@
   "COSMETIC/HACK_NO_SHADERS/TIP": "Деактивує шейдери в рівнях",
   "COSMETIC/HACK_NO_SHAKE": "Деакт. тряски",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Деактивує тригери тряски екрану в рівнях",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "Деакт. трейлу",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Деактивує трейл гравця",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Деакт. пульсації вейву",
@@ -371,6 +378,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Час переродження",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Змінює час переродження гравця",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ігнорувати спідхак",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Заливка хітбоксів",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Перешкоди",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Прозорість",
@@ -526,6 +535,7 @@
   "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Класична реалізація повноекранного режиму всередині вікна (не та, яку реалізували в самій GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Повноекранний",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Дозволяє грі заповнити основний дисплей повністю",
+  "DISPLAY/FULLSCREEN/COMBO": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Ексклюзивний",
   "DISPLAY/FULLSCREEN/COMBO/1": "Безрамковий",
   "UTILITY": "Утиліти",
@@ -550,6 +560,7 @@
   "SCREENSHOT": "Знімок екрану",
   "SCREENSHOT/SCREENSHOT": "Знімок екрану",
   "SCREENSHOT/SCREENSHOT/TIP": "Робить знімок екрану",
+  "SCREENSHOT/COMBO": "",
   "SCREENSHOT/COMBO/0": "Зберегти та скопіювати",
   "SCREENSHOT/COMBO/1": "Скопіювати в буфер обміну",
   "SCREENSHOT/COMBO/2": "Зберегти як файл",
@@ -594,6 +605,7 @@
   "STATUS/*/POSITION/3": "Справа знизу",
   "STATUS/*/MOVE/DOWN": "Вниз",
   "STATUS/*/MOVE/UP": "Вгору",
+  "STATUS/*/PREFIX": "",
   "STATUS/*/UNITS": "Показ юнітів",
   "STATUS/MESSAGE/ENABLED": "Повідомлення",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Повідомлення",
@@ -606,6 +618,7 @@
   "STATUS/CPS/DROPDOWN/TOTAL": "Показ загального значення",
   "STATUS/BEST_RUN/ENABLED": "Найкраща спроба",
   "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Точність ноукліпу",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Показ префіксу",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Смерті в ноукліпі",
@@ -618,6 +631,7 @@
   "STATUS/FRAME/ENABLED": "Лічильник кадрів",
   "STATUS/POSITION/ENABLED": "Позиція",
   "STATUS/REPLAY_STATE/ENABLED": "Стан повторного перегляду",
+  "STATUS/SESSION_TIME/ENABLED": "",
   "REPLAY": "Повторний перегляд",
   "REPLAY/FILE": "Вибрати макрос",
   "REPLAY/OPEN": "Відкрити",
